syntax = "proto3";

option go_package = "./;pcb";

package pcb;

service Greeter {
    rpc Stop (StopCommand) returns (StopReply) {}
    rpc InfoAll (InfoAllCommand) returns (InfoAllReply) {}
    rpc InfoSummary (InfoSummaryCommand) returns (InfoSummaryReply) {}

}


message StopCommand {
    uint32 instruction = 1; // 表示正常停止、还是强制停止
}

message StopReply {
    uint32 ReturnStatus = 1; // 返回类型,0 表示发送成功，并正常返回。 1 表示无法正常停止，并返回为什么无法停止原因。 不管是否能停止，检查点信息都更新
    string Content = 2; // 返回内容
}


message InfoAllCommand {
    uint32 instruction = 1;
}

message InfoAllReply {
    string DBType = 1;
    string Program = 2;
    string LASTSTARTED = 3;
    string STATUS = 4;
    string FILENUMBER = 5;
    int64 FILEOFFSET = 6;
    string LOGNUMBER = 7;
    int64 LOGOFFSET = 8;
}

message InfoSummaryCommand {
    uint32 instruction = 1;
}

message InfoSummaryReply {
    string DBType = 1;
    string Program = 2;
    string Status = 3;
    string Group = 4;
    string Lag = 5;
    string TimeSinceChkpt = 6;
}
